--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-      "module": "commonjs",
       "esModuleInterop": true,
+      "module": "CommonJS",
       "target": "es6",
       "noImplicitAny": true,
       "moduleResolution": "node",
